// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Renders 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <App />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1>
           Gif warrior 2.0 
</h1>,
        <h3>
           time to get giffing
</h3>,
        <NavBar
          SetMainScreens={[Function]}
/>,
        <Home />,
      ],
      "className": "App",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": " Gif warrior 2.0 ",
        },
        "ref": null,
        "rendered": " Gif warrior 2.0 ",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": " time to get giffing",
        },
        "ref": null,
        "rendered": " time to get giffing",
        "type": "h3",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "SetMainScreens": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1>
             Gif warrior 2.0 
</h1>,
          <h3>
             time to get giffing
</h3>,
          <NavBar
            SetMainScreens={[Function]}
/>,
          <Home />,
        ],
        "className": "App",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": " Gif warrior 2.0 ",
          },
          "ref": null,
          "rendered": " Gif warrior 2.0 ",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": " time to get giffing",
          },
          "ref": null,
          "rendered": " time to get giffing",
          "type": "h3",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "SetMainScreens": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Navbar renders 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NavBar />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <button
          className="nav-bar__home"
          id="Home"
          onClick={[Function]}
>
          Home
</button>,
        <div
          className="nav-bar__new-char"
          id="NewChar"
>
          New Char
</div>,
        <div
          className="nav-bar __battle"
          id="Battle"
>
          Battle
</div>,
      ],
      "className": "nav-bar",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Home",
          "className": "nav-bar__home",
          "id": "Home",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Home",
        "type": "button",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "New Char",
          "className": "nav-bar__new-char",
          "id": "NewChar",
        },
        "ref": null,
        "rendered": "New Char",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Battle",
          "className": "nav-bar __battle",
          "id": "Battle",
        },
        "ref": null,
        "rendered": "Battle",
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <button
            className="nav-bar__home"
            id="Home"
            onClick={[Function]}
>
            Home
</button>,
          <div
            className="nav-bar__new-char"
            id="NewChar"
>
            New Char
</div>,
          <div
            className="nav-bar __battle"
            id="Battle"
>
            Battle
</div>,
        ],
        "className": "nav-bar",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Home",
            "className": "nav-bar__home",
            "id": "Home",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Home",
          "type": "button",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "New Char",
            "className": "nav-bar__new-char",
            "id": "NewChar",
          },
          "ref": null,
          "rendered": "New Char",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Battle",
            "className": "nav-bar __battle",
            "id": "Battle",
          },
          "ref": null,
          "rendered": "Battle",
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders home page correctly 1`] = `[Function]`;
